package com.example.learningmaterials.设计模式.d_工厂方法;

/**
 * 抽象工厂类
 */
public interface ILeiFengFactory {

    LeiFeng createLeiFeng();
}
