package com.example.learningmaterials.设计模式.d_工厂方法.具体实现类;

import com.example.learningmaterials.设计模式.d_工厂方法.LeiFeng;

public class Undergraduate extends LeiFeng {

    public Undergraduate() {
        name = "大学生: ";
    }
}
