package com.example.learningmaterials.设计模式.d_工厂方法.具体实现类;

import com.example.learningmaterials.设计模式.d_工厂方法.LeiFeng;

public class Volunteer extends LeiFeng {

    public Volunteer() {
        name = "志愿者: ";
    }
}
