@startuml

class LeiFeng{
{field} 做好事的雷锋
{method} 扫地、洗衣服、买米
}

class Undergraduate{
{field} 大学生
{method} 扫地、洗衣服、买米
}

class Volunteer{
{field} 志愿者
{method} 扫地、洗衣服、买米
}

interface ILeiFengFactory{
{method} createLeiFeng()
}

class UndergraduateFactory{
{field} 大学生工厂
{method} 扫地、洗衣服、买米
}

class VolunteerFactory{
{field} 志愿者工厂
{method} 扫地、洗衣服、买米
}


ILeiFengFactory <|-- UndergraduateFactory
ILeiFengFactory <|-- VolunteerFactory
LeiFeng <|-- Undergraduate
LeiFeng <|-- Volunteer

@enduml